# ecommerce_new

./: .envrc  .gitignore  .local.env  .pre-commit-config.yaml
source/: README.md  config.json  docker-compose.yaml  otel-collector-config.yaml
source/api/: Dockerfile  Makefile  alembic.ini  pyproject.toml
source/api/alembic/: env.py
source/api/alembic/versions/: b46becdd9775_create_users_table.py
source/api/app/: __init__.py  exception_handlers.py  extensions.py  main.py  settings.py
source/api/app/common/: __init__.py  exceptions.py  logging.py  router.py  schemas.py  security.py  utils.py
source/api/app/database/: __init__.py  base.py  manager.py  models.py  repository.py  session.py
source/api/app/sb/: client.py
source/api/app/users/: __init__.py  expections.py  models.py  protocols.py  repository.py  router.py  schemas.py  services.py
source/api/tests/: conftest.py  fixtures.py  helpers.py
source/api/tests/database/: __init__.py  test.session.py  test_fake_repository.py  test_repository.py  test_session.py
source/api/tests/sb/: emulator.py
source/api/tests/users/: fixtures.py  test_repository.py  test_router.py
