[project]
name = "app"
version = "0.1.0"
description = "new basic python template"
authors = [
    {name = "Ankur Shrivastava"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "python-json-logger (>=3.3.0,<4.0.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "bcrypt (>=4.3.0,<5.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "prometheus-fastapi-instrumentator (>=7.1.0,<8.0.0)",
    "opentelemetry-exporter-otlp-proto-http (>=1.37.0,<2.0.0)",
    "opentelemetry-instrumentation-fastapi (>=0.58b0,<0.59)",
    "opentelemetry-instrumentation-starlette (>=0.58b0,<0.59)",
    "opentelemetry-instrumentation-httpx (>=0.58b0,<0.59)",
    "opentelemetry-instrumentation-psycopg2 (>=0.58b0,<0.59)",
    "opentelemetry-instrumentation-sqlalchemy (>=0.58b0,<0.59)",
    "opentelemetry-instrumentation-system-metrics (>=0.58b0,<0.59)",
    "httpx (>=0.28.1,<0.29.0)",
    "python-jose (>=3.5.0,<4.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "types-psycopg2 (>=2.9.21.20250915,<3.0.0.0)",
    "types-python-jose (>=3.5.0.20250531,<4.0.0.0)",
    "azure-servicebus (>=7.14.2,<8.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "azure-identity (>=1.25.0,<2.0.0)",
    "pydantic[email] (>=2.12.3,<3.0.0)",
]

[tool.poetry]
packages = [{ include = "app" }]
[tool.poetry.group.dev.dependencies]
pre-commit = "^4.3.0"
ruff = "^0.13.0"
mypy = "^1.18.1"
pydocstyle = "^6.3.0"
import-linter = "^2.4"
opentelemetry-sdk = "^1.37.0"
isort = "^6.0.1"
pyupgrade = "^3.20.0"
black = "^25.1.0"
alembic = "^1.16.5"
pytest = "^8.4.2"
faker = "^37.8.0"
factory-boy = "^3.3.3"
testcontainers = "^4.13.1"
pytest-cov = "^7.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
